Use __packed to prevent alignment from taking place, which otherwise may change the on-disk format in an incompatible way.  Without this change, msdosfs created on FreeBSD/arm would not be mountable.

PR:		bin/162486
Submitted by:	Ian Lepore <freebsd damnhippie dyndns org>
Reported by:	Mattia Rossi <mrossi at swin.edu.au>
MFC after:	3 days

Former-commit-id: 3e02b5192fb52b1cc632fa4e78ff45d5740fc51d